--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div *ngFor="let genre of apiService.genres">
-  <mat-card>{{genre.label}}</mat-card>
-</div>
+<app-genres></app-genres>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
