--- a/client/src/app/library-nav/library-nav.component.html
+++ b/client/src/app/library-nav/library-nav.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar>
-    <span>MyLibrary</span>
+    <span routerLink = "/">MyLibrary</span>
+    <button mat-button [routerLink]="['/authors']">Authors</button>
     <span style="flex: 1 1 auto"></span>
+    <button mat-button [routerLink]="['/login']">Login</button>
     <button mat-button [routerLink]="['/register']">Register</button>
 </mat-toolbar>
