--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,18 +1,22 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>
-      <h4>Login</h4>
-    </mat-card-title>
+    <mat-card-title>Login</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form>
-      <mat-form-field>
-        <input [(ngModel)]="loginData.username" name="username" matInput placeholder="username">
-      </mat-form-field>
-      <mat-form-field>
-        <input [(ngModel)]="loginData.password" name="password" matInput placeholder="password" type="password">
-      </mat-form-field>
-      <button mat-raised-button color="primary" (click)="post()">Login</button>
+    <form (ngSubmit)="submit()" #f='ngForm' class="col-centered">
+      <div class="container">
+        <div class="row">
+          <mat-form-field>
+            <input [(ngModel)]="loginData.username" name="username" matInput placeholder="username">
+          </mat-form-field>
+        </div>
+        <div class="row">
+          <mat-form-field>
+            <input [(ngModel)]="loginData.password" name="password" matInput placeholder="password" type="password">
+          </mat-form-field>
+        </div>
+      </div>
+      <button type="submit" mat-raised-button color="primary">Login</button>
     </form>
   </mat-card-content>
 </mat-card>
