--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,21 +1,27 @@
-<mat-card>
+<mat-card class="col-centered full-width">
   <mat-card-header>
-    <mat-card-title>
-      <h4>Register New User</h4>
-    </mat-card-title>
+    <mat-card-title>Register New User</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form>
-      <mat-form-field>
-        <input [(ngModel)]="registerData.username" name="username" matInput placeholder="username">
-      </mat-form-field>
-      <mat-form-field>
-        <input [(ngModel)] = "registerData.email" name = "email" matInput placeholder="email" type= "email" >
-      </mat-form-field>
-      <mat-form-field>
-        <input [(ngModel)] = "registerData.password" name = "password" matInput placeholder="password" type = "password">
-      </mat-form-field>
-      <button mat-raised-button color="primary" (click) = "post()">Register</button>
+    <form (ngSubmit)="submit()" #f='ngForm' class="col-centered">
+      <div class="container">
+        <div class="row">
+          <mat-form-field>
+            <input [(ngModel)]="registerData.username" name="username" matInput placeholder="username">
+          </mat-form-field>
+        </div>
+        <div class="row">
+          <mat-form-field>
+            <input [(ngModel)]="registerData.email" name="email" matInput placeholder="email" type="email">
+          </mat-form-field>
+        </div>
+        <div class="row">
+          <mat-form-field>
+            <input [(ngModel)]="registerData.password" name="password" matInput placeholder="password" type="password">
+          </mat-form-field>
+        </div>
+      </div>
+      <button type="submit" mat-raised-button color="primary">Register</button>
     </form>
   </mat-card-content>
 </mat-card>
