--- a/client/src/app/library-nav/library-nav.component.html
+++ b/client/src/app/library-nav/library-nav.component.html
@@ -1,7 +1,20 @@
 <mat-toolbar>
-    <span routerLink = "/">MyLibrary</span>
+    <span routerLink="/">MyLibrary</span>
     <button mat-button [routerLink]="['/authors']">Authors</button>
     <span style="flex: 1 1 auto"></span>
-    <button mat-button [routerLink]="['/login']">Login</button>
-    <button mat-button [routerLink]="['/register']">Register</button>
+    <ng-template [ngIf]="isAuthenticated()">
+        <button mat-button
+                color="accent">
+            <mat-icon>account_box</mat-icon> &nbsp; Pesho
+        </button>
+
+        <button mat-button
+                 (click)="authService.logout()">
+              <mat-icon>exit_to_app</mat-icon> &nbsp; Logout
+        </button>
+    </ng-template>
+    <ng-template [ngIf]="!isAuthenticated()">
+        <button mat-button [routerLink]="['/login']"><mat-icon>perm_identity</mat-icon> &nbsp; Login</button>
+        <button mat-button [routerLink]="['/register']"><mat-icon>call_made</mat-icon> &nbsp; Register</button>
+    </ng-template>
 </mat-toolbar>
