--- a/client/src/app/author/author.component.html
+++ b/client/src/app/author/author.component.html
@@ -1,30 +1,15 @@
-<mat-card class="col-centered full-width">
+<mat-card>
   <mat-card-header>
-    <mat-card-title>New Author</mat-card-title>
+    <mat-card-title><h3>Name: {{author?.name}}</h3></mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form (ngSubmit)="submit()" #f='ngForm' class="col-centered">
-      <div class="container">
-        <div class="row">
-          <mat-form-field class="input-width">
-            <input [(ngModel)]="authorData.name" name="name" matInput placeholder="Name">
-          </mat-form-field>
-        </div>
-        <div class="row">
-          <mat-form-field class="input-width">
-              <input [(ngModel)]="authorData.born" name="born" matInput [matDatepicker]="picker" placeholder="Born">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div class="row">
-          <mat-form-field class="input-width">
-            <textarea matInput [(ngModel)]="authorData.description" name="description"
-              placeholder="Description"></textarea>
-          </mat-form-field>
-        </div>
-      </div>
-      <button type="submit" mat-raised-button color="primary">Add</button>
-    </form>
+    <mat-list>
+      <mat-list-item>
+        <strong>Description:</strong> {{author?.description}}
+      </mat-list-item>
+      <mat-list-item>
+          <strong>Born:</strong> {{formatDate(author?.born)}}
+        </mat-list-item>
+    </mat-list>
   </mat-card-content>
 </mat-card>
