--- a/client/src/app/authors/authors.component.html
+++ b/client/src/app/authors/authors.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let author of apiService.authors">
-  <mat-card [routerLink] = "['/profile', author._id]" style="cursor: pointer">{{author.name}}</mat-card>
+  <mat-card [routerLink] = "['/author', author._id]" style="cursor: pointer">{{author.name}}</mat-card>
 </div>
