--- a/client/src/app/book/book.component.html
+++ b/client/src/app/book/book.component.html
@@ -1,15 +1,18 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>{{book?.title}}</mat-card-title>
+    <mat-card-title><h3>{{book?.title}}</h3></mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <img mat-card-image src={{book?.cover}}>
     <mat-list>
+      <strong *ngIf="book?.authors.length > 1">Authors:</strong>
+      <strong *ngIf="book?.authors.length == 1">Author:</strong>
       <mat-list-item>
-        Authors: {{book?.authors[0]?.name}}
+        <span *ngFor="let author of book?.authors"> {{author.name}} </span>
       </mat-list-item>
+      <strong>About the book:</strong>
       <mat-list-item>
-        About the book: {{book?.about}}
+         {{book?.about}}
       </mat-list-item>
     </mat-list>
   </mat-card-content>
