Added books read by user in the user view

--- a/client/src/app/author/author.component.html
+++ b/client/src/app/author/author.component.html
@@ -9,7 +9,7 @@
       <strong>Description:</strong> {{author?.description}}
     </p>
     <p>
-      <strong>Born:</strong> {{formatDate(author?.born)}}
+      <strong>Born:</strong> {{apiService.formatDate(author?.born)}}
     </p>
   </mat-card-content>
 </mat-card>
