--- a/client/src/app/authors/authors.component.html
+++ b/client/src/app/authors/authors.component.html
@@ -1,4 +1,6 @@
-<div *ngFor="let author of apiService.authors">
-  <mat-card [routerLink] = "['/author', author._id]" style="cursor: pointer">{{author.name}}</mat-card>
+<div *ngFor="let author of authors">
+  <mat-card [routerLink]="['/author', author._id]" style="cursor: pointer">{{author.name}}</mat-card>
 </div>
-  <button mat-raised-button color="primary" [routerLink] = "['/author/new']">Add New Author</button>
+<span *ngIf="authService.isAuthenticated()">
+  <button mat-raised-button color="primary" [routerLink]="['/author/new']"><mat-icon>add</mat-icon>&nbsp;Add New Author</button>
+</span>
