--- a/client/src/app/books/books.component.less
+++ b/client/src/app/books/books.component.less
@@ -5,4 +5,13 @@
 img {
   width: 200px;
   height: 307px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
