--- a/client/src/app/book/book.component.html
+++ b/client/src/app/book/book.component.html
@@ -1,19 +1,25 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title><h3>{{book?.title}}</h3></mat-card-title>
+    <mat-card-title>
+      <h3>{{book?.title}}</h3>
+    </mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <img mat-card-image src={{book?.cover}}>
-    <mat-list>
-      <strong *ngIf="book?.authors.length > 1">Authors:</strong>
-      <strong *ngIf="book?.authors.length == 1">Author:</strong>
-      <mat-list-item>
-        <span *ngFor="let author of book?.authors"> {{author.name}} </span>
-      </mat-list-item>
-      <strong>About the book:</strong>
-      <mat-list-item>
-         {{book?.about}}
-      </mat-list-item>
-    </mat-list>
+    <br>
+    <strong *ngIf="book?.authors.length > 1">Authors:</strong>
+    <strong *ngIf="book?.authors.length == 1">Author:</strong>
+    <div *ngFor="let author of book?.authors">
+      <span> {{author.name}}</span>
+    </div>
+    <strong *ngIf="book?.genres.length > 1">Genres:</strong>
+    <strong *ngIf="book?.genres.length == 1">Genre:</strong>
+    <div *ngFor="let genre of book?.genres">
+      <span> {{genre.label}} &nbsp;</span>
+    </div>
+    <strong>About the book:</strong>
+    <div>
+      {{book?.about}}
+    </div>
   </mat-card-content>
 </mat-card>
