--- a/client/src/app/book/book.component.less
+++ b/client/src/app/book/book.component.less
@@ -1,8 +1,16 @@
 img{
-    width: 300px;
+    width: 25%;
     height: auto;
     margin: 10px;
 }
+
 mat-item{
     height: auto;
 }
+
+.centered {
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
