--- a/client/src/app/author/author.component.html
+++ b/client/src/app/author/author.component.html
@@ -1,17 +1,19 @@
-<mat-card>
+<mat-card class="centered">
   <mat-card-header>
     <mat-card-title>
-      <h4>Name: {{author?.name}}</h4>
+      <h4>{{author?.name}}</h4>
     </mat-card-title>
   </mat-card-header>
   <mat-card-content>
+    <img mat-card-image class="authorImage" src={{author?.image}}>
+    <br>
     <strong>Description:</strong>
     <div>
-       {{author?.description}}
+      {{author?.description}}
     </div>
     <strong>Born:</strong>
     <div>
-       {{apiService.formatDate(author?.born)}}
+      {{apiService.formatDate(author?.born)}}
     </div>
     <strong>Books By {{author?.name}}:</strong>
     <div *ngFor="let book of booksByAuthor">
@@ -23,7 +25,7 @@
       </mat-card>
     </div>
   </mat-card-content>
-  <mat-card-actions *ngIf="authService.isAuthenticated()">
+  <mat-card-actions *ngIf="authService.isAuthenticated()" class="centered">
     <button (click)="delete()" mat-raised-button color="warn">
       <mat-icon>warning</mat-icon>&nbsp; DELETE
     </button>
