--- a/client/src/app/authors/authors.component.less
+++ b/client/src/app/authors/authors.component.less
@@ -10,3 +10,11 @@ mat-card {
   margin-left: auto;
   margin-right: auto;
 }
+
+img {
+  width: 100%;
+  height: 60%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
