--- a/client/src/app/book/book.component.html
+++ b/client/src/app/book/book.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="centered">
   <mat-card-header>
     <mat-card-title>
       <h3>{{book?.title}}</h3>
@@ -10,7 +10,7 @@
     <strong *ngIf="book?.authors.length > 1">Authors:</strong>
     <strong *ngIf="book?.authors.length == 1">Author:</strong>
     <div *ngFor="let author of book?.authors">
-      <span> {{author.name}}</span>
+      <a [routerLink]="['/author', author._id]"> {{author.name}}</a>
     </div>
     <strong *ngIf="book?.genres.length > 1">Genres:</strong>
     <strong *ngIf="book?.genres.length == 1">Genre:</strong>
@@ -22,7 +22,7 @@
       {{book?.about}}
     </div>
   </mat-card-content>
-  <mat-card-actions *ngIf="authService.isAuthenticated()">
+  <mat-card-actions *ngIf="authService.isAuthenticated()" class="centered">
     <button (click)="delete()" mat-raised-button color="warn">
       <mat-icon>warning</mat-icon>&nbsp; DELETE
     </button>
